@@ -1,14 +1,20 @@
 package com.Matteof.mattos.DsEcommerce_Oauth2.service;
 
+import com.Matteof.mattos.DsEcommerce_Oauth2.Dto.UserDTO;
 import com.Matteof.mattos.DsEcommerce_Oauth2.Projections.UserDetailsProjection;
 import com.Matteof.mattos.DsEcommerce_Oauth2.Repository.UserRepository;
 import com.Matteof.mattos.DsEcommerce_Oauth2.entities.Role;
 import com.Matteof.mattos.DsEcommerce_Oauth2.entities.User;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
 
 @Service
@@ -21,17 +27,35 @@ public class UserService implements UserDetailsService {
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
 
         List<UserDetailsProjection> result = repository.searchUserAndRolesByEmail(username);
-
-        if (result.isEmpty()) throw new UsernameNotFoundException("Email not found");
+        if (result.isEmpty()) {
+            throw new UsernameNotFoundException("Email not found");
+        }
 
         User user = new User();
-
-        user.setEmail(result.getFirst().getUsername());
-        user.setPassword(result.getFirst().getPassword());
+        user.setEmail(result.get(0).getUsername());
+        user.setPassword(result.get(0).getPassword());
         for (UserDetailsProjection projection : result) {
             user.addRole(new Role(projection.getRoleId(), projection.getAuthority()));
         }
 
         return user;
+    }
+
+    protected User authenticated() {
+        try {
+            Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+            Jwt jwtPrincipal = (Jwt) authentication.getPrincipal();
+            String username = jwtPrincipal.getClaim("username");
+            return repository.findByEmail(username).get();
+        }
+        catch (Exception e) {
+            throw new UsernameNotFoundException("Invalid user");
+        }
+    }
+
+    @Transactional(readOnly = true)
+    public UserDTO getMe() {
+        User entity = authenticated();
+        return new UserDTO(entity);
     }
 }
